One value per tile in multi-channel tessellation
To significantly facilitate the processing, tiles in each channel are
contiguous. So the tile map would only correspond to the actual input
dataset when there was only one channel or one dimension. The
`gal_tile_full_values_for_disp' has been added to do the job: you give it
an array (of any type) that is assumed to have one value for each tile. You
also give it the tessellation structure. This function will then sort the
values in the necessary way so that even when channels are present, the
tile values will be displayed properly.

This can later be used for interpolation (when interpolation is meant to be
done within channels or over the whole image for example). Also, it makes
it very easy to make a FITS file of the tile values for inspection (thanks
to the new `gal_tile_full_values_write'). To make this second job more
easily configurable the new `--oneelempertile' option has been added so if
the user only wants one pixel/element per tile (and not a huge image with
mostly constant values), they can do so easily with this option.

Other work that has been done in this commit:

 - `gal_blank_initialize' is a new function to initialize an array with
   blank values corresponding to its type.

 - Until now, `GAL_TILE_PO_OISET' would need the C types as arguments, but
   now, it calculates the types of the input and output to find the proper
   type internally. This greatly simplified the code, since the caller
   doesn't have to worry about the type any more.

 - `gal_tile_block_write_const_value' is a new function to write the tile
   values (one value per tile) into an allocated block of memory (with the
   same size as the tile's allocated block of memory). It can write values
   of any type that don't necessarily cover the whole image.

 - `gal_tile_block_check_tiles' now uses `gal_tile_block_write_const_value'
   to write the tile IDs into the allocated block.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -4414,11 +4414,12 @@ A FITS binary table (see @ref{Recognized table formats}).
 @node Processing options, Operating mode options, Input output options, Common options
 @subsubsection Processing options
 
-Some processing steps are common to several programs, so to help in using
-those steps in the different programs, they are defined as common options
-to all programs. Note that this class of common options is thus necessarily
-less common between all the programs than those described in @ref{Input
-output options}, or @ref{Operating mode options} options.
+Some processing steps are common to several programs, so they are defined
+as common options to all programs. Note that this class of common options
+is thus necessarily less common between all the programs than those
+described in @ref{Input output options}, or @ref{Operating mode options}
+options. Also, if they are irrelevant for a program, these options will not
+display in the @option{--help} output of the program.
 
 @table @option
 
@@ -4462,6 +4463,34 @@ Make a FITS file with the same dimensions as the input but each pixel is
 replaced with the ID of the tile that it is associated with. Note that the
 tile IDs start from 0. See @ref{Tessellation} for more on Tiling an image
 in Gnuastro.
+
+@item --oneelempertile
+When showing the tile values (for example with @option{--checktiles}, or
+when the program's output is tessellated) only use one element for each
+tile. This can be useful when only the relative values given to each tile
+compared to the rest are important or need to be checked. Since the tiles
+usually have a large number of pixels within them the output will be much
+smaller, and so easier to read, write, store, or send.
+
+Note that when the full input size in any dimension is not exactly
+divisible by the given @option{--tilesize} in that dimension, the edge
+tile(s) will have different sizes (in units of the input's size), see
+@option{--remainderfrac}. But with this option, all displayed values are
+going to have the (same) size of one data-element. Hence, in such cases,
+the image proportions are going to be slightly different with this
+option.
+
+If your input image is not exaclty divisible by the tile size and you want
+one value per tile for some higher-level processing, all is not lost
+though. You can see how many pixels were within each tile (for example to
+weight the values or discard some for later processing) with Gnuastro's
+Statistics (see @ref{Statistics}) as shown below. The output FITS file is
+going to have two extensions, one with the median calculated on each tile
+and one with the number of elements that each tile covers.
+
+@example
+$ aststatistics --median --number --ontile input.fits
+@end example
 @end table
 
 @node Operating mode options,  , Processing options, Common options
